# simple-cpp-sockets

./: CMakeLists.txt  README.md  sample_server.cpp  server.cpp  tepsoc.pc.in
examples/: http_server.cpp  sample_server.cpp
include/: simplecppsockets.hpp  tepsoc.hpp
src/: simplecppsockets.cpp  tepsoc.cpp
tests/: client_api_test.cpp  mock_server.hpp  mock_server_test.cpp  server_api_test.cpp
